# system-monitor

./: .gitignore  CMakeLists.txt
src/: MonitorUI.cpp  MonitorUI.hpp  SystemInfo.cpp  SystemInfo.hpp  main.cpp
